# prospector-simple

./: CHANGELOG.md  FLOW.md  LICENSE  README.md  SECURITY.md  TOPOLOGY.md  docker-compose.yml
docs/: CODE_ARCHITECTURE.md
p2p-node/: Cargo.toml  Dockerfile
p2p-node/src/: chunk_strategy.rs  main.rs  notify.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  Graph.tsx  api.ts  main.tsx
