[package]
name = "p2p-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# iroh + blobs
# NOTE: versions chosen to match docs at time of writing; you can bump as needed.
iroh = { version = "0.91", default-features = false, features = ["discovery-local-network"] }
iroh-blobs = "0.93"
iroh-base = "0.91"

# util
mime = "0.3"
async-trait = "0.1"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[workspace]

[features]
default = ["p2p_notify"]
p2p_notify = []
